--- a/config/config.env
+++ b/config/config.env
@@ -1,5 +1,5 @@
 PORT=4000
 
-FRONTEND_URL = http://localhost:5173
+FRONTEND_URL = https://mern-ecomm-kibm.vercel.app/
 
 MONGO_URI = mongodb+srv://tanishk:84oVdCVWHaKSQVPj@cluster0.xjxgzil.mongodb.net/?retryWrites=true
