--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,7 @@
     "routes":[
         {
             "src":"/(.*)",
-            "dest":"app.js",
-            "headers": [
-                { "key": "Access-Control-Allow-Origin", "value": "*" }
-            ]
+            "dest":"app.js"
         }
     ]
 }
